<resources>
    <string name="app_name">MSApps_HomeAssignment</string>
    <string name="favoritespage">Favorites Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="article_image">Article Image</string>
    <string name="articleimage">ArticleImage</string>
    <string name="favoriteicon">FavoriteIcon</string>
    <string name="welcome_page_title">MS NEWS</string>
    <string name="go_back">Go back</string>
    <string name="no_items_available">List is Empty</string>
    <string name="please_login_to_access_favorites">Please Login to access Favorites</string>
</resources>