<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/light_teal"
    tools:context=".ui.welcome.WelcomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/welcome_page_title"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_h5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/category_business"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="business"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h15"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h5">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/business"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/business"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_entertainment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="entertainment"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h15"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v66"
        app:layout_constraintStart_toEndOf="@id/guideline_v33"
        app:layout_constraintTop_toBottomOf="@id/guideline_h5">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/entertainment"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/entertainment"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_health"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="health"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_v66"
        app:layout_constraintTop_toBottomOf="@id/guideline_h5">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/health"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/health"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/category_sports"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="sports"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h30"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v66"
        app:layout_constraintStart_toEndOf="@+id/category_technology"
        app:layout_constraintTop_toBottomOf="@+id/category_entertainment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/sports"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/sports"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_technology"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="technology"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h30"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_business">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/tech"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/category1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/technology"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_science"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:tag="science"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category_sports"
        app:layout_constraintTop_toBottomOf="@+id/category_health">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/science"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/science"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/article_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorites_page_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:contentDescription="@string/favoritespage"
        android:outlineSpotShadowColor="#39363C"
        android:src="@drawable/ic_baseline_favorite_24"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>